# RecSysFood

./: .env  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  filtre_recommandation.py  main.py  pyproject.toml  supabase-schema.sql  test.py  update.py
backend/: filtre_recommandation.py
frontend/: .env  .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.json
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/components/: AppSidebar.tsx  ProtectedRoute.tsx
frontend/src/components/layouts/: AuthLayout.tsx
frontend/src/components/recommendations/: EmptyState.tsx  GeneratingState.tsx  GradingCard.tsx  GradingComplete.tsx  GradingSection.tsx  RecipeCard.tsx  RecipeCardSkeleton.tsx  RecipeDetailDialog.tsx  RecommendationsHeader.tsx  index.ts  recipe-images.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/api/: auth.ts  favorites.ts  interactions.ts  preferences.ts  recommendations.ts
frontend/src/lib/supabase/: auth.ts  client.ts
frontend/src/pages/: Dashboard.tsx  NewSignupFlow.tsx  SignupFlow.tsx  favorites.tsx  profile.tsx  recommendations.tsx  settings.tsx
frontend/src/pages/auth/: Login.tsx  Signup.tsx  VerifyEmail.tsx
frontend/src/types/: database.ts
lib/: __init__.py  recipes.py  supabase.py
models/: Model_GraphSAGE.py  __init__.py  database.py
routes/: auth.py  interactions.py  preferences.py  recommendations.py
utils/: Model_GraphSAGE.py  content_based_model.py  filtre_recommandation.py  insert.py  pd.py  recipes_loader.py  recsys_scheduler.py
(+14 files in other folders)
